minor changes to index

--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
             <!--<a href="mailto:name@email.com">name@email.com</a>-->
           <!--</div>-->
           <p class="mb-5">
+              Hello! My name is Emad A. Alghamdi. I am a second-year PhD student in the Faculty of Languages and Linguistics at the University of Melbourne. I am also a Research Fellow in the Digital Studio at the same university. In my PhD work, I am trying to answer one research question: what makes a video complex for language learners? To answer this question, I draw on various fields of studies (e.g., Linguistics, Discourse and Text Comprehension, Computer Vision, Phonetics) to build an understanding and then develop a Machine Learning classifier that could help in classifying videotexts based on varying degrees of complexity. I am also working on developing a video playing interface for language learners.
 
-            Hello! My name is Emad A. Alghamdi. I am a second-year PhD student in the Faculty of Languages and Linguistics at the University of Melbourne. I am also a Research Fellow in the Digital Studio at the same university. In my PhD work, I am trying to answer one research question: what makes a video complex for language learners? To answer this question, I draw on various fields of studies (e.g., linguistics, computer vision, phonetics, music and media studies) to build understanding and then develop a Machine Learning classifier that could help in determining the complexity of videotexts. I am also working on developing a video playing interface for language learners.
+
           </p>
         </b>
 
@@ -151,31 +152,13 @@
               <td>@ University of Sydeny</td>
             </tr>
             <tr>
-                <tr>
-              <td><strong> 18.8.2018</strong> </td>
-              <td> Presenting a paper at The Saudi Conferrence</td>
-              <td>@ University of Sydeny</td>
+
+          <td><strong> 24.11.2018</strong> </td>
+              <td> I will presenting a paper at 35 ASCILITE 2018 Conferrence</td>
+              <td>@ Deakin University </td>
             </tr>
-              <tr>
-              <td><strong> 18.8.2018</strong> </td>
-              <td> Presenting a paper at The Saudi Conferrence</td>
-              <td>@ University of Sydeny</td>
-            </tr>
-              <tr>
-              <td><strong> 18.8.2018</strong> </td>
-              <td> Presenting a paper at The Saudi Conferrence</td>
-              <td>@ University of Sydeny</td>
-            </tr>
-              <tr>
-              <td><strong> 18.8.2018</strong> </td>
-              <td> Presenting a paper at The Saudi Conferrence</td>
-              <td>@ University of Sydeny</td>
-            </tr>
-              <tr>
-              <td><strong> 18.8.2018</strong> </td>
-              <td> Presenting a paper at The Saudi Conferrence</td>
-              <td>@ University of Sydeny</td>
-            </tr>
+
+
 
 
           </tbody>
@@ -507,19 +490,19 @@
             </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
+
               Certificate of appreciation awarded by the Saudi Cultural Attaché in Washington, D.C for my diligent works and efforts as a president of the Saudi Club at Missouri State University.
             </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
+
               Full Masters Scholarship by KAU</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
+            
                 Letter of appreciation by the Saudi Cultural Attaché in Washington, D.C for writing an article about volunteerism</li>
             <li>
-        
+
           </ul>
         </div>
       </section>
