--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <!--<a href="mailto:name@email.com">name@email.com</a>-->
           <!--</div>-->
           <p class="mb-5">
-              Hello! My name is Emad A. Alghamdi. I am a second-year PhD student in the Faculty of Languages and Linguistics at the University of Melbourne. I am also a Research Fellow in the Digital Studio at the same university. In my PhD work, I am trying to answer one research question: what makes a video complex for language learners? To answer this question, I draw on various fields of studies (e.g., Linguistics, Discourse and Text Comprehension, Computer Vision, Phonetics) to build an understanding and then develop a Machine Learning classifier that could help in classifying videotexts based on varying degrees of complexity. I am also working on developing a video playing interface for language learners.
+              Hello! My name is Emad A. Alghamdi. I am a second-year PhD student in the Faculty of Languages and Linguistics at the University of Melbourne. I am also a Research Fellow in the Digital Studio at the same university. In my PhD work, I am trying to answer one research question: what makes a video complex for language learners? To answer this question, I draw on various fields of studies (e.g., Linguistics, Discourse and Text Comprehension, Computer Vision, and Phonetics) to build an understanding and then develop a Machine Learning classifier that could help in classifying videotexts based on varying degrees of complexity. I am also working on developing a video playing interface for language learners.
 
 
           </p>
@@ -146,19 +146,23 @@
 
           </thead>
           <tbody>
+              <tr>
+              <td><strong> 24.11.2018</strong> </td>
+                  <td> I will present a paper at 35 ASCILITE 2018 Conferrence</td>
+                  <td>@ Deakin University </td>
+              </tr>
+
             <tr>
               <td><strong> 18.8.2018</strong> </td>
-              <td> Presenting a paper at The Saudi Conferrence</td>
+              <td> Presented a paper at The Saudi Conferrence</td>
               <td>@ University of Sydeny</td>
             </tr>
+
             <tr>
-
-          <td><strong> 24.11.2018</strong> </td>
-              <td> I will presenting a paper at 35 ASCILITE 2018 Conferrence</td>
-              <td>@ Deakin University </td>
+              <td><strong> 18.8.2018</strong> </td>
+              <td> Developed a Writing Feedback System to be used in our video scaffolded feedback project </td>
+              <td> <a href="http://www.eaalghamdi.pythonanywhere.com"> Here </td>
             </tr>
-
-
 
 
           </tbody>
@@ -499,7 +503,7 @@
               Full Masters Scholarship by KAU</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-            
+
                 Letter of appreciation by the Saudi Cultural Attaché in Washington, D.C for writing an article about volunteerism</li>
             <li>
 
