--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+            <a class="nav-link js-scroll-trigger" href="#dev">Personal Dev</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
@@ -78,8 +78,9 @@
           <!--<div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·-->
             <!--<a href="mailto:name@email.com">name@email.com</a>-->
           <!--</div>-->
-          <p class="mb-5">
-              Hello! My name is Emad A. Alghamdi. I am a second-year PhD student in the Faculty of Languages and Linguistics at the University of Melbourne. I am also a Research Fellow in the Digital Studio at the same university. In my PhD work, I am trying to answer one research question: what makes a video complex for language learners? To answer this question, I draw on various fields of studies (e.g., Linguistics, Discourse and Text Comprehension, Computer Vision, and Phonetics) to build an understanding and then develop a Machine Learning classifier that could help in classifying videotexts based on varying degrees of complexity. I am also working on developing a video playing interface for language learners.
+          <p class="mb-2">
+              Hello! My name is Emad A. Alghamdi. I am a second-year PhD student in the Faculty of Languages and Linguistics at the University of Melbourne. I am also a Research Fellow in the Digital Studio at the same Uni. In my PhD work, I am working on developing a Machine Learning Model for Videotext Complexity.
+              I am also working on developing a video playing interface for language learners.
 
 
           </p>
@@ -137,59 +138,59 @@
 
 </div>
 
-        <div class="col-9">
+        <div class="col-10">
 
 
           <h4 id="subtitle" class="mb-0">News & Talks <a> <small> (Read ALL) </small></a></h4>
+
         <table class="table table-sm table-hover">
           <thead>
 
           </thead>
           <tbody>
               <tr>
-              <td><strong> 24.11.2018</strong> </td>
-                  <td> I will present a paper at 35 ASCILITE 2018 Conferrence</td>
-                  <td>@ Deakin University </td>
+              <td><small> 24-11-2018</small> </td>
+                  <td> I will present a paper at the 35th ASCILITE 2018 Conferrence </small></td>
+                  <td> <small> @Deakin Uni</td>
               </tr>
 
             <tr>
-              <td><strong> 18.8.2018</strong> </td>
-              <td> Presented a paper at The Saudi Conferrence</td>
-              <td>@ University of Sydeny</td>
+              <td><small> 18-8-2018</small> </td>
+              <td> Presented a paper at The 3rd Saudi Scientific Conferrence</td>
+              <td> <small> @Uni of Sydeny</td>
             </tr>
 
             <tr>
-              <td><strong> 18.8.2018</strong> </td>
-              <td> Developed a Writing Feedback System to be used in our video scaffolded feedback project </td>
-              <td> <a href="http://www.eaalghamdi.pythonanywhere.com"> Here </td>
+              <td><small> 14-10-2018</small> </td>
+              <td> Developed the Writing Feedback System</td>
+              <td> <a href="eaalghamdi.pythonanywhere.com"> Here </td>
             </tr>
 
 
           </tbody>
         </table>
-
-
       </section>
+
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto col-9">
-          <h3 class="mb-5">Experience</h3>
+          <h2 class="mb-5">Experience</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h4 class="mb-0">Research Fellow</h4>
-              <div class="subheading mb-3"> University of Melbourne</div>
-
+              <h5 class="mb-0">Research Fellow </h5>
+              <div class=""> University of Melbourne</div>
+              <p></p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2017 - Present</span>
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h4 class="mb-0">Founder and CEO</h4>
-              <div class="subheading mb-3">Dropzin On-Demand Shipping</div>
+              <h5 class="mb-0">Founder and CEO</h5>
+              <div class="">Dropzin On-Demand Shipping</div>
               <p> Founded the startup. Administered day-to-day operations. Recruited early employees.</p>
             </div>
             <div class="resume-date text-md-right">
@@ -197,10 +198,10 @@
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Director of e-training Unit</h3>
-              <div class="subheading mb-3">King Abdulaziz University</div>
+              <h5 class="mb-0">Director of e-training Unit</h5>
+              <div class="">King Abdulaziz University</div>
               <p>Founded KAUx, a Massive Open Online Courses (MOOC) platform. § Designed two MOOCs.</p>
             </div>
             <div class="resume-date text-md-right">
@@ -208,33 +209,33 @@
             </div>
           </div>
 
-           <div class="resume-item d-flex flex-column flex-md-row mb-5">
+           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h4 class="mb-0">Head of Distance Learning Unit</h4>
-              <div class="subheading mb-3">King Abdulaziz University</div>
-              <p>§ Administered two distance online programs.§ Trained instructors in using several education technologies</p>
+              <h5 class="mb-0">Head of Distance Learning Unit</h5>
+              <div class="">King Abdulaziz University</div>
+              <p>Administered two distance online programs.Trained instructors in using several education technologies</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2013 - 2016</span>
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Lecturer</h3>
-              <div class="subheading mb-3">King Abdulaziz University</div>
-              <p>§ Administered two distance online programs.§ Trained instructors in using several education technologies</p>
+              <h5 class="mb-0">Lecturer</h5>
+              <div class="">King Abdulaziz University</div>
+              <p>Tought English courses for Uni students</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2013 - 2017</span>
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Teacher Assistant</h3>
-              <div class="subheading mb-3">King Abdulaziz University</div>
-              <p>§ Administered two distance online programs.§ Trained instructors in using several education technologies</p>
+              <h5 class="mb-0">Teacher Assistant</h5>
+              <div class="">King Abdulaziz University</div>
+              <p></p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2009 - 2013</span>
@@ -249,12 +250,12 @@
         <div class="my-auto">
           <h2 class="mb-5">Education</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Melbounre</h3>
-              <div class="subheading mb-3">PhD Student</div>
+              <h5 class="mb-0">University of Melbounre</h5>
+              <div class="">PhD Student</div>
               <div>Applied Linguistics</div>
-              <!--<p>GPA: 3.23</p>-->
+              <p></p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary"> 2017 -  2019</span>
@@ -263,8 +264,8 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Missouri State University</h3>
-              <div class="subheading mb-3">Masters of Science</div>
+              <h5 class="mb-0">Missouri State University</h5>
+              <div class="">Masters of Science</div>
                <div>Educational Technology</div>
               <p>GPA: 4/4</p>
             </div>
@@ -276,8 +277,8 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Missouri State University</h3>
-              <div class="subheading mb-3"> Master of Arts</div>
+              <h5 class="mb-0">Missouri State University</h5>
+              <div class=""> Master of Arts</div>
                <div> English (TESOL) </div>
               <p>GPA: 3.974</p>
             </div>
@@ -285,9 +286,6 @@
               <span class="text-primary"> 2010 - 2013</span>
             </div>
           </div>
-
-
-
         </div>
       </section>
 
@@ -299,39 +297,40 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Book Chapters</h3>
+              <h5 class="mb-3">Book Chapters</h5>
               <ui>
-                <li>
-                  <span>
+                <li class="mb-3">
+
                     Alghamdi, E. A. (2018). Effects of Using Multimodal Glosses in Video Games to Enhance Incidental
                     Vocabulary Learning and Retention. Handbook of Research on Integrating Technology into
                     Contemporary Language Learning and Teaching Chapter: 21
-                  </span>
+
                 </li>
               </ui>
-              <h3 class="mb-0"> Articles</h3>
+
+              <h5 class="mb-3"> Articles</h5>
               <ui>
-                <li>
+                <li class="mb-2">
                   Alghamdi, E. A., Shah, S. R. (2018). Exploring the Effects of Mobile-Based Audience Response System on EFL Students’ Learning and Engagement in a Fully Synchronous Online Course. International Journal of English Linguistics https://doi.org/10.5539/ijel.v8n3p92
                 </li>
 
-                <li>
+                <li class="mb-2">
                   Alghamdi, E. A., Rajab, Hussam & Shah, S. R. (2016). Unwatched Online Students Self-created WhatsApp Group in Distance Education: A Collaborative Learning Tool or Cheating Technique. International Research in Education,4(1).133-148.
                 </li>
 
-                <li>
+                <li class="mb-2">
                   Ahmed, Hussien, Shah, S. R. & Alghamdi, Emad. Exploring the Nature of Continuing Professional Development (CPD) Programs in a Language Institute. International Research in Education,4(1).
                 </li>
 
-                <li>
+                <li class="mb-2">
                   Alghamdi, E.A. (2016). Untangling multimedia affects via playing an online hidden-object game. International Journal of Computer Assisted Language Learning and Teaching. 6(1), 24-39. DOI: 10.4018/IJCALLT.2016010102.
                 </li>
 
-                <li>
+                <li class="mb-2">
                   Alghamdi, E. A., Aljohani, N. R., Alsaleh, A., Bedewi, W., & Basheri, M. (2015). CrowdyQ: A Virtual Crowdsourcing Platform for Question Items Development in Higher Education. The 17th International Conference on Information Integration and Web-based Applications & Services (iiWAS2015).
                 </li>
 
-                <li>
+                <li class="mb-2">
                   Alghamdi, E. A. (2015). The representation of Islam in western media: The coverage of Norway terrorist attacks. International Journal of Applied Linguistics & English Literature. 4(3), 198-204.
                 </li>
 
@@ -339,11 +338,11 @@
                   Alghamdi, E. A. (2014). Discourse Markers in ESL Personal Narrative and Argumentative Papers: A Qualitative and Quantitative Analysis. International Journal of Humanities and Social Science, 4(4), 294-305. Retrieved from http://www.ijhssnet.com/journal/index/2319.
                 </li>
 
-                <li>
+                <li class="mb-2">
                   Alghamdi, E. A. (2014). Gulf pidgin Arabic: A descriptive and analysis of stability. International Journal of Linguistics, 6(6), 110-127. http://dx.doi.org/10.5296/ijl.v6i6.6846
                 </li>
 
-                <li>
+                <li class="mb-2">
                   Alghamdi, E. A. (2014). An investigation of the efficacy of multimedia glosses in incidental EFL vocabulary learning and retention through playing an online hidden-object game. Missouri State University, MA Thesis.
                 </li>
 
@@ -360,20 +359,22 @@
 
           <div class="row">
              <div class="col ">
-          <img src="img/Kaux_logo.png">
-          </div>
-            <div class="col ">
-              <p>  KAUx: A Massive Open Online Platform</p>
+                 <div class="card">
+                     <img src="img/Kaux_logo.png">
+                 </div>
             </div>
+            <div class="col ">
+                <div class="card">
+                    <img src="img/Kaux_logo.png">
+                </div>
+           </div>
+           <div class="col ">
+               <div class="card">
+                   <img src="img/Kaux_logo.png">
+               </div>
           </div>
-
+          </div>
         </div>
-
-
-
-
-
-
       </section>
 
 
@@ -395,20 +396,12 @@
             <li class="list-inline-item">
               <i class="devicons devicons-jquery"></i>
             </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-sass"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-less"></i>
-            </li>
+
             <li class="list-inline-item">
               <i class="devicons devicons-bootstrap"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-grunt"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-gulp"></i>
@@ -436,7 +429,7 @@
         </div>
       </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="dev">
         <div class="my-auto">
           <h2 class="mb-5">Certifications</h2>
           <ul>
