--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <div class="resume-content mr-auto">
               <h5 class="mb-0">Lecturer</h5>
               <div class="">King Abdulaziz University</div>
-              <p>Tought English courses for Uni students</p>
+              <p>Taught English courses for Uni students</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2013 - 2017</span>
@@ -247,7 +247,7 @@
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
-        <div class="my-auto">
+        <div class="my-auto col-9">
           <h2 class="mb-5">Education</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row">
@@ -292,7 +292,7 @@
 
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="publication">
-        <div class="my-auto">
+        <div class="my-auto col-10">
           <h2 class="mb-5">Publication</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -354,7 +354,7 @@
       </section>
 
        <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="project">
-        <div class="my-auto ">
+        <div class="my-auto col-9">
           <h2 class="mb-5">Projects</h2>
 
           <div class="row">
@@ -365,12 +365,12 @@
             </div>
             <div class="col ">
                 <div class="card">
-                    <img src="img/Kaux_logo.png">
+                    <img src="">
                 </div>
            </div>
            <div class="col ">
                <div class="card">
-                   <img src="img/Kaux_logo.png">
+                   <img src="">
                </div>
           </div>
           </div>
@@ -379,7 +379,7 @@
 
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
-        <div class="my-auto">
+        <div class="my-auto col-9">
           <h2 class="mb-5">Skills</h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
@@ -430,7 +430,7 @@
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="dev">
-        <div class="my-auto">
+        <div class="my-auto col-9">
           <h2 class="mb-5">Certifications</h2>
           <ul>
             <li>
@@ -473,7 +473,7 @@
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
-        <div class="my-auto">
+        <div class="my-auto col-9">
           <h2 class="mb-5">Awards & Scholarships</h2>
           <ul class="fa-ul mb-0">
             <li>
