--- a/index.html
+++ b/index.html
@@ -79,15 +79,14 @@
             <!--<a href="mailto:name@email.com">name@email.com</a>-->
           <!--</div>-->
           <p class="mb-2">
-              Hello! My name is Emad A. Alghamdi. I am a second-year PhD student in the Faculty of Languages and Linguistics at the University of Melbourne. I am also a Research Fellow in the Digital Studio at the same Uni. In my PhD work, I am working on developing a Machine Learning Model for Videotext Complexity.
-              I am also working on developing a video playing interface for language learners.
-
+            I am an assistant professor of computational linguistics at King Abdelaziz University. I am currently investigating video difficulty and complexity. My research interests lie at the interactions of Applied Linguistics, Human-Computer Interactions (HCI), and Machine Learning. 
+            
 
           </p>
         </b>
 
           <p class="mb-5">
-           Before starting my PhD, I was the founder and director of KAUx, a MOOC platform at King Abdulaziz University. I received an MA in English (TESOL) and MS in Educational Technology, from Missouri State University, USA.
+            Before starting my PhD, I was the founder and director of KAUx, a MOOC platform at King Abdulaziz University. I received an MA in English (TESOL) and MS in Educational Technology, from Missouri State University, USA.
           </p>
         </div>
 
