--- a/index.html
+++ b/index.html
@@ -252,12 +252,12 @@
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h5 class="mb-0">University of Melbounre</h5>
-              <div class="">PhD Student</div>
-              <div>Applied Linguistics</div>
+              <div class="">PhD</div>
+              <div>Computational Linguistics </div>
               <p></p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary"> 2017 -  2019</span>
+              <span class="text-primary"> 2017 -  2021</span>
             </div>
           </div>
 
