--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
         </b>
 
           <p class="mb-5">
-            Before starting my PhD, I was the founder and director of KAUx, a MOOC platform at King Abdulaziz University. I received an MA in English (TESOL) and MS in Educational Technology, from Missouri State University, USA.
+            In my PhD work, I investigated what makes a video difficult for language learners and developed computational models to automatically assess difficulty in videos for use in language assessment, research, and instruction.  I also built the Automated Video Analysis (AUVANA), a cross-platform desktop application for extracting, computing, and visualizing complexity in videos. I am so interested in building innovative tools (websites, plugins, mobile apps, desktop apps, or anything I can build) to help language learners, teachers, researchers, and educators. 
+            Before starting my PhD, I was the founder and director of KAUx, a MOOC platform at King Abdulaziz University. 
           </p>
         </div>
 
@@ -98,15 +99,15 @@
           <small>
               <a href="#"> Email </a>
               </br>
-                <a href="#"> Linkedin </a>
+                <a href="https://www.linkedin.com/in/emad-a-alghamdi-7517a7a6/"> Linkedin </a>
               </br>
-              <a href="#"> ResearchGate </a>
+              <a href="https://www.researchgate.net/profile/Emad-Alghamdi-3"> ResearchGate </a>
               </br>
-               <a href="#"> Google Scholar </a>
+               <a href="https://scholar.google.com/citations?user=DKLKZqsAAAAJ&hl=en"> Google Scholar </a>
               </br>
-              <a href="#"> Twitter </a>
+              <a href="https://twitter.com/Emad_A_Alghamdi"> Twitter </a>
               <br>
-              <a href="#"> Github </a>
+              <a href="https://github.com/Eaalghamdi"> Github </a>
               </br>
           </small>
       </div>
@@ -147,6 +148,12 @@
 
           </thead>
           <tbody>
+            <tr>
+              <td><small> 28-7-2021</small> </td>
+                  <td>  I completed my PhD in computational linguistics 
+                     </small></td>
+                  <td> <small> @ The University of Melbourne </td>
+              </tr>
               <tr>
               <td><small> 24-11-2018</small> </td>
                   <td> I will present a paper at the 35th ASCILITE 2018 Conferrence </small></td>
