--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
           <strong>Office</strong>
           <br>
           <small>
-              <span> Second Floor </span>
+              <span> Fivth Floor </span>
               </br>
-              <span> Digital Studio </span>
+              <span> Melbounre Connect</span>
               </br>
-              <span> Arts West (Building 148) </span>
+              <span> The School of Computing & Information Systems </span>
               <br>
               <span> University of Melbourne </span>
           </small>
@@ -131,7 +131,7 @@
    <div class="col-3 colly">
        <div class="span">
           <small>
-            <img  id="map" src="img/my_office.png">
+            <img  id="map" src="img/my_office.jpeg">
           </small>
     </div>
   </div>
