--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <strong>Office</strong>
           <br>
           <small>
-              <span> Fivth Floor </span>
+              <span> Fifth Floor </span>
               </br>
               <span> Melbounre Connect</span>
               </br>
@@ -317,7 +317,7 @@
 
                 <li class="mb-3">
 
-                  Nawaz*a, S,  Alghamdi, E.A,  Srivastavac, N.,  Lodge, J., &  Corrin, L. (In press). Understanding the role of AI and learning analytics techniques in addressing task difficulties in STEM education.
+                  Nawaz, S,  <b> Alghamdi, E.A </b>,  Srivastavac, N.,  Lodge, J., &  Corrin, L. (In press). Understanding the role of AI and learning analytics techniques in addressing task difficulties in STEM education.
                 </li>
               </ui>
 
@@ -355,15 +355,11 @@
                 </li>
 
                 <li>
-                  Alghamdi, E. A. (2014). Discourse Markers in ESL Personal Narrative and Argumentative Papers: A Qualitative and Quantitative Analysis. International Journal of Humanities and Social Science, 4(4), 294-305. Retrieved from http://www.ijhssnet.com/journal/index/2319.
+                  <b> Alghamdi, E. A. </b> (2014). Discourse Markers in ESL Personal Narrative and Argumentative Papers: A Qualitative and Quantitative Analysis. International Journal of Humanities and Social Science, 4(4), 294-305. Retrieved from http://www.ijhssnet.com/journal/index/2319.
                 </li>
 
                 <li class="mb-2">
-                  Alghamdi, E. A. (2014). Gulf pidgin Arabic: A descriptive and analysis of stability. International Journal of Linguistics, 6(6), 110-127. http://dx.doi.org/10.5296/ijl.v6i6.6846
-                </li>
-
-                <li class="mb-2">
-                  Alghamdi, E. A. (2014). An investigation of the efficacy of multimedia glosses in incidental EFL vocabulary learning and retention through playing an online hidden-object game. Missouri State University, MA Thesis.
+                  <b> Alghamdi, E. A. </b>(2014). Gulf pidgin Arabic: A descriptive and analysis of stability. International Journal of Linguistics, 6(6), 110-127. http://dx.doi.org/10.5296/ijl.v6i6.6846
                 </li>
 
               </ui>
@@ -374,20 +370,46 @@
       </section>
 
        <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="project">
-        <div class="my-auto col-9">
+        <div class="my-auto col-10">
           <h2 class="mb-5">Projects</h2>
 
           <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
             <div class="col p-4 d-flex flex-column position-static">
-              <strong class="d-inline-block mb-2 text-primary">World</strong>
-              <h3 class="mb-0">Featured post</h3>
-              <div class="mb-1 text-muted">Nov 12</div>
-              <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="stretched-link">Continue reading</a>
+              <strong class="d-inline-block mb-2 text-primary">Web App</strong>
+              <h3 class="mb-0">KAUx</h3>
+              <!-- <div class="mb-1 text-muted">Nov 12</div> -->
+              <p class="card-text mb-auto"> KAUx was an Arabic MOOC platform </p>
+              <a href="#" class="stretched-link">More Info</a>
             </div>
             <div class="col-auto d-none d-lg-block">
-              <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-    
+              <img  width="200" height="250" src="img/Kaux_logo.png">
+            </div>
+          </div>
+
+
+          <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="col p-4 d-flex flex-column position-static">
+              <strong class="d-inline-block mb-2 text-primary">Web App</strong>
+              <h3 class="mb-0">CrowdyQ</h3>
+              <!-- <div class="mb-1 text-muted">Nov 12</div> -->
+              <p class="card-text mb-auto"> CrowdyQ is a crowedsourcing platform for generating highly quality exam items. </p>
+              <!-- <a href="#" class="stretched-link">More Info</a> -->
+            </div>
+            <div class="col-auto d-none d-lg-block">
+              <img  width="200" height="250" src="img/Kaux_logo.png">
+            </div>
+          </div>
+
+          <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="col p-4 d-flex flex-column position-static">
+              <strong class="d-inline-block mb-2 text-primary">Web App</strong>
+              <h3 class="mb-0">KAUx</h3>
+              <!-- <div class="mb-1 text-muted">Nov 12</div> -->
+              <p class="card-text mb-auto"> KAUx was an Arabic MOOC platform </p>
+              <a href="#" class="stretched-link">More Info</a>
+            </div>
+            <div class="col-auto d-none d-lg-block">
+              <img  width="200" height="250" src="img/Kaux_logo.png">
             </div>
           </div>
 
