--- a/index.html
+++ b/index.html
@@ -381,8 +381,8 @@
               <p class="card-text mb-auto"> KAUx was an Arabic MOOC platform </p>
               <a href="#" class="stretched-link">More Info</a>
             </div>
-            <div class="col-auto d-none d-lg-block">
-              <img  width="200" height="220" src="img/Kaux_logo.png">
+            <div class="col-auto d-none d-lg-block nargin_20 ">
+              <img  width="140" height="140" src="img/Kaux_logo.png">
             </div>
           </div>
 
@@ -395,10 +395,10 @@
               <p class="card-text mb-auto"> CrowdyQ is a crowedsourcing platform for generating highly quality exam items. </p>
               <!-- <a href="#" class="stretched-link">More Info</a> -->
             </div>
-            <div class="col-auto d-none d-lg-block">
-              <div> 
-              <img  width="200" height="220" src="">
-            </div>
+            <div class="col-auto d-none d-lg-block nargin_20 ">
+  
+              <img  width="140" height="140" src="">
+        
             </div>
           </div>
 
