--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="publication">
         <div class="my-auto col-10">
-          <h2 class="mb-5 title_center">Publication <span> (Recent Work)<</span> </h2>
+          <h3 class="mb-5 title_center">Publication </h3>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
