--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="project">
         <div class="my-auto col-10">
-          <h2 class="mb-5 title_center">Projects</h2>
+          <h3 class="mb-5 title_center">Projects</h3>
 
           <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 h-md-250 position-relative">
             <div class="col p-4 d-flex flex-column position-static">
@@ -227,7 +227,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto col-9">
-          <h2 class="mb-5 title_center">Experience</h2>
+          <h3 class="mb-5 title_center">Experience</h3>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
@@ -303,7 +303,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto col-9">
-          <h2 class="mb-5 title_center ">Education</h2>
+          <h3 class="mb-5 title_center ">Education</h3>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
@@ -472,7 +472,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="dev">
         <div class="my-auto col-9">
-          <h2 class="mb-5 title_center">Certifications</h2>
+          <h3 class="mb-5 title_center">Personal Development</h3>
           <ul>
             <li>
                Machine Learning with TensorFlow on Google Cloud Platform, a 5-course specialization by Google Cloud on Coursera. Specialization Certificate earned on June 19, 2018
@@ -515,7 +515,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto col-9">
-          <h2 class="mb-5 title_center">Awards & Scholarships</h2>
+          <h3 class="mb-5 title_center">Awards & Scholarships</h3>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
