--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div class="col p-4 d-flex flex-column position-static">
               <strong class="d-inline-block mb-2 text-primary">Web App</strong>
               <h3 class="mb-0">KAUx</h3>
-              <!-- <div class="mb-1 text-muted">Nov 12</div> -->
+              <div class="mb-1 text-muted">Completed</div>
               <p class="card-text mb-auto"> KAUx was an Arabic MOOC platform </p>
               <a href="#" class="stretched-link">More Info</a>
             </div>
@@ -208,15 +208,15 @@
             <div class="col p-4 d-flex flex-column position-static">
               <strong class="d-inline-block mb-2 text-primary">Web App</strong>
               <h3 class="mb-0">CrowdyQ</h3>
-              <!-- <div class="mb-1 text-muted">Nov 12</div> -->
+              <div class="mb-1 text-muted">Completed</div>
               <p class="card-text mb-auto"> CrowdyQ is a crowedsourcing platform for generating highly quality exam items. </p>
               <!-- <a href="#" class="stretched-link">More Info</a> -->
             </div>
-            <div class="col-auto d-none d-lg-block nargin_20 ">
+            <!-- <div class="col-auto d-none d-lg-block nargin_20 ">
   
               <img  width="140" height="140" src="">
         
-            </div>
+            </div> -->
           </div>
 
                 
