--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
               <p class="card-text mb-auto"> 
                 AUVANA (Automated Video Analysis) is a cross-platform software for extracting, computing, and visualizing visual complexity in videos using sophisticated computer vision algorithms
               </p>
-              <a href="#" class="stretched-link">More Info</a>
+              <a href="https://github.com/Eaalghamdi/auvana/blob/main/README.md" target=”_blank” class="stretched-link">More Info</a>
             </div>
             <div class="col-auto d-none d-lg-block nargin_20 ">
               <img  width="140" height="140" src="img/auvana_logo.png">
