--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
           <p class="mb-5">
             In my PhD work, I investigated what makes a video difficult for language learners and developed computational models to automatically assess difficulty in videos for use in language assessment, research, and instruction.  
-            I also built the Automated Video Analysis <a href="https://github.com/Eaalghamdi/auvana/blob/main/README.md" target="_blank"></a>(AUVANA)</a> , a cross-platform desktop application for extracting, computing, and visualizing complexity in videos. I am so interested in building innovative tools (websites, plugins, mobile apps, desktop apps, or anything I can build) to help language learners, teachers, researchers, and educators. 
+            I also built the Automated Video Analysis <a href="https://github.com/Eaalghamdi/auvana/blob/main/README.md" target="_blank">(AUVANA)</a> , a cross-platform desktop application for extracting, computing, and visualizing complexity in videos. I am so interested in building innovative tools (websites, plugins, mobile apps, desktop apps, or anything I can build) to help language learners, teachers, researchers, and educators. 
             Before starting my PhD, I was the founder and director of KAUx, a MOOC platform at King Abdulaziz University. 
           </p>
         </div>
