--- a/index.html
+++ b/index.html
@@ -80,17 +80,16 @@
           <!--</div>-->
           <p class="mb-2">
             I am an incoming assistant professor of computational linguistics at King Abdelaziz University. I am currently investigating video difficulty and complexity. My research interests lie at the intersection of Applied Linguistics, Human-Computer Interactions (HCI), and Machine Learning. 
-            
-
+    
           </p>
         </b>
 
           <p class="mb-5">
             In my PhD work, I investigated what makes a video difficult for language learners and developed computational models to automatically assess difficulty in videos for use in language assessment, research, and instruction.  
-            I also built the Automated Video Analysis <a href="https://github.com/Eaalghamdi/auvana/blob/main/README.md" target="_blank">(AUVANA)</a> , a cross-platform desktop application for extracting, computing, and visualizing complexity in videos. 
+            I also built the Automated Video Analysis <a href="https://github.com/Eaalghamdi/auvana" target="_blank">(AUVANA)</a> , a cross-platform desktop application for extracting, computing, and visualizing complexity in videos. 
             I was supervised by <a href =“https://findanexpert.unimelb.edu.au/profile/486-paul-gruba” target=”_blank”> Dr. Paul Gruba </a> and <a href=“https://findanexpert.unimelb.edu.au/profile/710004-eduardo-velloso” target=”_blank”>  Dr. Edaurdo Velloso</a>.
           </p>
-           <p>
+           <p class="mb-2"> 
             I am interested in building innovative tools (websites, plugins, mobile apps, desktop apps, etc.) to help language learners, teachers, researchers, and educators. 
             Before starting my PhD, I was the founding director of KAUx, a MOOC platform at King Abdulaziz University. 
           </p>
