--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <!--<a href="mailto:name@email.com">name@email.com</a>-->
           <!--</div>-->
           <p class="mb-2">
-            I am an incoming assistant professor of computational linguistics at King Abdelaziz University. I am currently investigating video difficulty and complexity. My research interests lie at the intersection of Applied Linguistics, Human-Computer Interactions (HCI), and Machine Learning. 
+            I am an incoming assistant professor of computational linguistics at King Abdulaziz University. I am currently investigating video difficulty and complexity. My research interests lie at the intersection of Applied Linguistics, Human-Computer Interactions (HCI), and Machine Learning. 
     
           </p>
         </b>
