added_auvana_images

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
               <strong class="d-inline-block mb-2 text-primary">Web & Mobile</strong>
               <h3 class="mb-0">Dropzin</h3>
               <div class="mb-1 text-muted">Completed</div>
-              <p class="card-text mb-auto"> A cross-platform shipping and deliveery app </p>
+              <p class="card-text mb-auto"> A cross-platform shipping and delivery app </p>
               <!-- <a href="#" class="stretched-link">More Info</a> -->
             </div>
             <div class="col-auto d-none d-lg-block nargin_20 ">
@@ -396,13 +396,13 @@
               <h5 class="mb-3"> Journal Articles</h5>
               <ui>
                 <li class="mb-2">
-                  <b> Alghamdi, E. A. </b> (Under review). What makes video difficult? <i> Computers and Education </i>. 
+                  <b> Alghamdi, E. A. </b> (In review). What makes video difficult? <i> Computers and Education.</i> 
                 </li>
                 <li class="mb-2">
-                  <b> Alghamdi, E. A. </b>, Gruba, P., & Velloso, E. (In Review). The relative contribution of verbal complexity to second language video lectures diculty assessment. <i> odernLanguage Journal. </i>M
+                  <b> Alghamdi, E. A. </b>, Gruba, P., & Velloso, E. (In Review). The relative contribution of verbal complexity to second language video lectures diculty assessment. <i> Modern Language Journal. </i>M
                 </li>
                 <li class="mb-2">
-                  <b> Alghamdi, E. A. </b>, Gruba, P., Marsi, A., & Velloso, E. (In Review). The use of lexical complexity for assessing diculty in instructional videos. <i> Language Learning and Technology.</i>
+                  <b> Alghamdi, E. A. </b>, Gruba, P., Marsi, A., & Velloso, E. (In Review). The use of lexical complexity for assessing diculty in instructional videos. <i> Language Learning & Technology.</i>
               </li>
                 <li class="mb-2">
                   <b> Alghamdi, E. A. </b>, Shah, S. R. (2018). Exploring the Effects of Mobile-Based Audience Response System on EFL Students’ Learning and Engagement in a Fully Synchronous Online Course. International Journal of English Linguistics https://doi.org/10.5539/ijel.v8n3p92
