--- a/index.html
+++ b/index.html
@@ -267,12 +267,12 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h5 class="mb-0">Research Fellow </h5>
-              <div class=""> University of Melbourne</div>
-              <p></p>
+              <h5 class="mb-0">Data Scientist Intern</h5>
+              <div class=""> Melbourne Data Analytics Platform (MDAP) @University of Melbourne</div>
+              <p> Implemented innovative machine learning approaches, including weak supervision, for the sentiment analysis on large corpus of texts related to sustainable energy</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">2017 - 2018</span>
+              <span class="text-primary">Nov 2019 - Feb 2020</span>
             </div>
           </div>
 
@@ -399,7 +399,7 @@
                   <b> Alghamdi, E. A. </b> (In review). What makes video difficult? <i> Computers and Education.</i> 
                 </li>
                 <li class="mb-2">
-                  <b> Alghamdi, E. A. </b>, Gruba, P., & Velloso, E. (In Review). The relative contribution of verbal complexity to second language video lectures diculty assessment. <i> Modern Language Journal. </i>M
+                  <b> Alghamdi, E. A. </b>, Gruba, P., & Velloso, E. (In Review). The relative contribution of verbal complexity to second language video lectures diculty assessment. <i> Modern Language Journal. </i>
                 </li>
                 <li class="mb-2">
                   <b> Alghamdi, E. A. </b>, Gruba, P., Marsi, A., & Velloso, E. (In Review). The use of lexical complexity for assessing diculty in instructional videos. <i> Language Learning & Technology.</i>
