added appreciation letter for MDPA

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h5 class="mb-0">Data Scientist Intern</h5>
-              <div class=""> Melbourne Data Analytics Platform (MDAP) @University of Melbourne</div>
+              <div class=""> Melbourne Data Analytics Platform (MDAP)</div>
               <p> Implemented innovative machine learning approaches, including weak supervision, for the sentiment analysis on large corpus of texts related to sustainable energy</p>
             </div>
             <div class="resume-date text-md-right">
@@ -542,6 +542,11 @@
         <div class="my-auto col-9">
           <h3 class="mb-5 title_center">Awards & Scholarships</h3>
           <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+               <a href="/img/Appreciation_Letter_Emad.pdf" target="_blank" > Letter of appreciation </a> for my work at MDAP 
+
+              </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
                Full PhD Scholarship by KAU
